# zkCNN

./: .gitignore  CMakeLists.txt
output/single/: demo-result-mlp1024.txt  demo-result-mlp16.txt  demo-result-mlp2048.txt  demo-result-mlp4096.txt  demo-result-mlp512.txt  demo-result-mlp8.txt
script/: CMakeCache.txt  Makefile  build.sh  cmake_install.cmake  demo_mlp.sh  zkcnn.xlsx
script/3rd/hyrax-bls12-381/: Makefile  cmake_install.cmake
script/3rd/hyrax-bls12-381/3rd/mcl/: Makefile  cmake_install.cmake  mclTargets.cmake
script/3rd/hyrax-bls12-381/src/: Makefile  cmake_install.cmake
script/src/: Makefile  cmake_install.cmake
src/: CMakeLists.txt  circuit.cpp  circuit.h  global_var.hpp  main_demo_mlp.cpp  models.cpp  models.hpp  neuralNetwork.cpp  prover.cpp  prover.hpp  sha256.hpp  utils.cpp  utils.hpp  verifier.cpp  verifier.hpp
